crates/datarig-tui/tests/snapshots/ui_snapshots__settings_clipboard_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ○ ×                                                                                                        "
"│  ＋ New connection          ╭ Settings ────────────────────────────────────────────────────────────────────────────────────────╮─────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●  local-pg               │                                                                                                  │ Space c s switch connection │"
"│  ▾  datarig default        │ Display                                                                                          │                             │"
"│    ▸ 󱋣 analytics            │   Nerd Font icons                   ‹ on        ›  Nerd Font icons → on                          │                             │"
"│    ▸ 󱋣 public               │   Command line position             ‹ popup     ›  A popup near the top of the screen            │                             │"
"│    ▸ 󱋣 shop                 │ Editor                                                                                           │                             │"
"│                             │   Editor keys                       ‹ vim       ›  Editor keys → vim                             │                             │"
"│                             │   Cursor shape                      ‹ on        ›  By mode (block or bar)                        │                             │"
"│                             │ Results                                                                                          │                             │"
"│                             │   Cell detail                       ‹ panel     ›  A panel on the right of the results           │                             │"
"│                             │ Clipboard                                                                                        │                             │"
"│                             │   Clipboard                         ‹ auto      ›  Automatic: OSC 52 over SSH, else the system … │                             │"
"│                             │   Column names in copies            ‹ auto      ›  When more than one row is copied              │                             │"
"│                             │ Language                                                                                         │                             │"
"│                             │   UI language                       ‹ en        ›  Change language → English                     │                             │"
"│                             │ Secrets                                                                                          │                             │"
"│                             │   Password storage of new profiles  ‹ auto      ›  New profiles' password → auto (keychain when… │                             │"
"│                             │──────────────────────────────────────────────────────────────────────────────────────────────────│                             │"
"│                             │ How copies reach the clipboard. OSC 52 goes through the terminal, so it also works over SSH;     │                             │"
"│                             │ inside tmux it needs set -g set-clipboard on.                                                    │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             ╰─────────────────────────────────────────────────────────────── j/k move · h/l change · Esc close ╯                             │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                                                                                                  EN "
