crates/datarig-tui/tests/snapshots/ui_snapshots__settings_clipboard_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│ ╭ Settings ────────────────────────────────────────────────────────────────╮─╮"
"│▾│ Display                                                                  │ │"
"│ │   Nerd Font icons           ‹ on        ›  Nerd Font icons → on          │e│"
"│ │   Command line position     ‹ popup     ›  A popup near the top of the … │ │"
"│ │   Theme                     ‹ terminal  ›  Your terminal's own colors (… │ │"
"│ │ Editor                                                                   │ │"
"│ │   Cursor shape              ‹ on        ›  By mode (block or bar)        │ │"
"│ │   Yanks to the clipboard    ‹ on        ›  Yes, as Vim with clipboard=u… │ │"
"│ │   Formatter: keywords       ‹ preserve  ›  As written                    │ │"
"│ │   Formatter: indent         ‹ 4         ›  4 spaces                      │ │"
"│ │ Results                                                                  │ │"
"│ │   Cell detail               ‹ panel     ›  A panel on the right of the … │ │"
"│ │ Clipboard                                                                │t│"
"│ │   Clipboard                 ‹ auto      ›  Automatic: OSC 52 over SSH, … │ │"
"│ │   Column names in copies    ‹ auto      ›  When more than one row is co… │ │"
"│ │ Language                                                                 │ │"
"│ │   UI language               ‹ en        ›  Change language → English     │t│"
"│ │ Secrets                                                                  │ │"
"│ │   Password storage of new…  ‹ auto      ›  New profiles' password → aut… │ │"
"│ │ How copies reach the clipboard. OSC 52 goes through the terminal, so it  │ │"
"│ ╰─────────────────────────────────────── j/k move · h/l change · Esc close ╯ │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
