crates/datarig-tui/tests/snapshots/ui_snapshots__settings_icons_en_160x45.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────────────────────╮ 1 console 1 ○ ×                                                                                                        "
"│  ＋ New connection          ╭ Settings ────────────────────────────────────────────────────────────────────────────────────────╮─────────────────────────────╮" Hidden by multi-width symbols: [(4, " ")]
"│▾ ●   local-pg               │                                                                                                  │ Space c s switch connection │"
"│  ▾ datarig default          │ Display                                                                                          │                             │"
"│    ▸ analytics              │   Nerd Font icons                   ‹ auto      ›  Nerd Font icons → ask again (with a preview)  │                             │"
"│    ▸ public                 │   Command line position             ‹ popup     ›  A popup near the top of the screen            │                             │"
"│    ▸ shop                   │   Theme                             ‹ terminal  ›  Your terminal's own colors (the default)      │                             │"
"│                             │ Editor                                                                                           │                             │"
"│                             │   Cursor shape                      ‹ on        ›  By mode (block or bar)                        │                             │"
"│                             │ Results                                                                                          │                             │"
"│                             │   Cell detail                       ‹ panel     ›  A panel on the right of the results           │                             │"
"│                             │ Clipboard                                                                                        │                             │"
"│                             │   Clipboard                         ‹ auto      ›  Automatic: OSC 52 over SSH, else the system … │                             │"
"│                             │   Column names in copies            ‹ auto      ›  When more than one row is copied              │                             │"
"│                             │ Language                                                                                         │                             │"
"│                             │   UI language                       ‹ en        ›  Change language → English                     │                             │"
"│                             │ Secrets                                                                                          │                             │"
"│                             │   Password storage of new profiles  ‹ auto      ›  New profiles' password → auto (keychain when… │                             │"
"│                             │──────────────────────────────────────────────────────────────────────────────────────────────────│                             │"
"│                             │ Preview:                                                                                     │                             │"
"│                             │ If these show as □ or ?, your terminal font lacks Nerd Font glyphs: turn icons off, or install   │                             │"
"│                             │ one from nerdfonts.com.                                                                          │                             │"
"│                             │ Nerd Font glyphs for connections, key columns and marks. Needs a Nerd Font as the terminal font. │                             │"
"│                             │ Auto: not decided yet — text marks until you answer the question with a preview (choosing auto   │                             │"
"│                             │ asks again).                                                                                     │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             │                                                                                                  │                             │"
"│                             ╰─────────────────────────────────────────────────────────────── j/k move · h/l change · Esc close ╯                             │"
"╰──────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                                                                                                  EN "
