crates/datarig-tui/tests/snapshots/ui_snapshots__settings_icons_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ○ ×                                        "
"│ ╭ Settings ────────────────────────────────────────────────────────────────╮─╮"
"│▾│ Display                                                                  │t│"
"│ │   Nerd Font icons           ‹ auto      ›  Nerd Font icons → ask again … │e│"
"│ │   Command line position     ‹ popup     ›  A popup near the top of the … │ │"
"│ │ Editor                                                                   │ │"
"│ │   Editor keys               ‹ vim       ›  Editor keys → vim             │ │"
"│ │   Cursor shape              ‹ on        ›  By mode (block or bar)        │ │"
"│ │ Results                                                                  │ │"
"│ │   Cell detail               ‹ panel     ›  A panel on the right of the … │ │"
"│ │ Clipboard                                                                │ │"
"│ │   Clipboard                 ‹ auto      ›  Automatic: OSC 52 over SSH, … │ │"
"│ │   Column names in copies    ‹ auto      ›  When more than one row is co… │ │"
"│ │ Language                                                                 │t│"
"│ │   UI language               ‹ en        ›  Change language → English     │ │"
"│ │ Secrets                                                                  │ │"
"│ │   Password storage of new…  ‹ auto      ›  New profiles' password → aut… │ │"
"│ │──────────────────────────────────────────────────────────────────────────│t│"
"│ │ Preview:                                                             │ │"
"│ │ If these show as □ or ?, your terminal font lacks Nerd Font glyphs: turn │ │"
"│ │ icons off, or install one from nerdfonts.com.                            │ │"
"│ ╰─────────────────────────────────────── j/k move · h/l change · Esc close ╯ │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
