crates/datarig-tui/tests/snapshots/ui_snapshots__settings_icons_on_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ○ ×                                        "
"│ ╭ Settings ────────────────────────────────────────────────────────────────╮─╮"
"│▾│ Display                                                                  │ │"
"│ │   Nerd Font icons           ‹ on        ›  Nerd Font icons → on          │e│"
"│ │   Command line position     ‹ popup     ›  A popup near the top of the … │ │"
"│ │   Theme                     ‹ terminal  ›  Your terminal's own colors (… │ │"
"│ │ Editor                                                                   │ │"
"│ │   Cursor shape              ‹ on        ›  By mode (block or bar)        │ │"
"│ │ Results                                                                  │ │"
"│ │   Cell detail               ‹ panel     ›  A panel on the right of the … │ │"
"│ │ Clipboard                                                                │ │"
"│ │   Clipboard                 ‹ auto      ›  Automatic: OSC 52 over SSH, … │ │"
"│ │   Column names in copies    ‹ auto      ›  When more than one row is co… │ │"
"│ │ Language                                                                 │t│"
"│ │   UI language               ‹ en        ›  Change language → English     │ │"
"│ │ Secrets                                                                  │ │"
"│ │   Password storage of new…  ‹ auto      ›  New profiles' password → aut… │ │"
"│ │ Preview:                                                             │t│"
"│ │ If these show as □ or ?, your terminal font lacks Nerd Font glyphs: turn │ │"
"│ │ icons off, or install one from nerdfonts.com.                            │ │"
"│ │ Nerd Font glyphs for connections, key columns and marks. Needs a Nerd    │ │"
"│ ╰─────────────────────────────────────── j/k move · h/l change · Esc close ╯ │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
