crates/datarig-tui/tests/snapshots/ui_snapshots__settings_theme_en_80x24.snap
---
source: crates/datarig-tui/tests/ui_snapshots.rs
expression: backend
---
"╭ Explorer ────────────╮ 1 console 1 ×                                          "
"│ ╭ Settings ────────────────────────────────────────────────────────────────╮─╮"
"│▾│ Display                                                                  │ │"
"│ │   Nerd Font icons           ‹ on        ›  Nerd Font icons → on          │e│"
"│ │   Command line position     ‹ popup     ›  A popup near the top of the … │ │"
"│ │   Theme                     ‹ terminal  ›  Your terminal's own colors (… │ │"
"│ │ Editor                                                                   │ │"
"│ │   Cursor shape              ‹ on        ›  By mode (block or bar)        │ │"
"│ │ Results                                                                  │ │"
"│ │   Cell detail               ‹ panel     ›  A panel on the right of the … │ │"
"│ │ Clipboard                                                                │ │"
"│ │   Clipboard                 ‹ auto      ›  Automatic: OSC 52 over SSH, … │ │"
"│ │   Column names in copies    ‹ auto      ›  When more than one row is co… │ │"
"│ │ Language                                                                 │t│"
"│ │   UI language               ‹ en        ›  Change language → English     │ │"
"│ │ Secrets                                                                  │ │"
"│ │   Password storage of new…  ‹ auto      ›  New profiles' password → aut… │ │"
"│ │ Terminal background: not detected (catppuccin, tokyo-night and gruvbox   │t│"
"│ │ use their dark variant)                                                  │ │"
"│ │ The colors of the whole UI. terminal uses your terminal's own colors.    │ │"
"│ │ catppuccin, tokyo-night and gruvbox follow the terminal's background     │ │"
"│ ╰─────────────────────────────────────── j/k move · h/l change · Esc close ╯ │"
"╰──────────────────────╯╰──────────────────────────────────────────────────────╯"
" NORMAL  local-pg · policy: default │ Connected to local-pg                  EN "
